force-app/main/default/objects/LT_Manifest_Line__c/LT_Manifest_Line__c.object-meta.xml
<CustomObject>
    <description>Linha do Romaneio - LogiTrack Operations 360.</description>
    <label>Linha do Romaneio</label>
    <nameField>
        <displayFormat>LR-{000000}</displayFormat>
        <label>Codigo da Linha</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linhas do Romaneio</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>