force-app/main/default/objects/LT_Manifest_Line__c/fields/LT_Collection_City__c.field-meta.xml
<CustomField>
    <fullName>LT_Collection_City__c</fullName>
    <description>Cidade da coleta/transferencia desta linha.</description>
    <label>Cidade</label>
    <type>Text</type>
    <length>80</length>
</CustomField>