force-app/main/default/objects/LT_Manifest_Line__c/fields/LT_Description__c.field-meta.xml
<CustomField>
    <fullName>LT_Description__c</fullName>
    <description>Descricao da linha.</description>
    <label>Descricao</label>
    <type>Text</type>
    <length>255</length>
</CustomField>