force-app/main/default/objects/LT_Manifest_Line__c/fields/LT_Manifest__c.field-meta.xml
<CustomField>
    <fullName>LT_Manifest__c</fullName>
    <description>Romaneio a que a linha pertence.</description>
    <label>Romaneio</label>
    <referenceTo>LT_Manifest__c</referenceTo>
    <relationshipLabel>Linhas do Romaneio</relationshipLabel>
    <relationshipName>LT_Manifest_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>