force-app/main/default/objects/LT_Manifest_Line__c/fields/LT_Package_Count__c.field-meta.xml
<CustomField>
    <fullName>LT_Package_Count__c</fullName>
    <description>Quantidade de pacotes desta linha.</description>
    <label>Qtd. de Pacotes</label>
    <required>true</required>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>