force-app/main/default/objects/LT_Manifest_Line__c/fields/LT_Pickup_Request__c.field-meta.xml
<CustomField>
    <fullName>LT_Pickup_Request__c</fullName>
    <description>Coleta que esta linha representa.</description>
    <label>Solicitacao de Coleta</label>
    <referenceTo>LT_Pickup_Request__c</referenceTo>
    <relationshipLabel>Linhas de Romaneio</relationshipLabel>
    <relationshipName>LT_Manifest_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>