force-app/main/default/objects/LT_Manifest_Line__c/fields/LT_Shipment__c.field-meta.xml
<CustomField>
    <fullName>LT_Shipment__c</fullName>
    <description>Remessa individual transferida (mini transferencia).</description>
    <label>Remessa</label>
    <referenceTo>LT_Shipment__c</referenceTo>
    <relationshipLabel>Linhas de Romaneio</relationshipLabel>
    <relationshipName>LT_Manifest_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>