force-app/main/default/objects/LT_Manifest_Line__c/validationRules/LT_Line_Package_Count_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Line_Package_Count_Positive</fullName>
    <active>true</active>
    <description>A quantidade de pacotes deve ser maior que zero.</description>
    <errorConditionFormula>LT_Package_Count__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>LT_Package_Count__c</errorDisplayField>
    <errorMessage>Informe uma quantidade de pacotes maior que zero.</errorMessage>
</ValidationRule>