force-app/main/default/objects/LT_Manifest_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LT_Manifest__c</columns>
    <columns>LT_Package_Count__c</columns>
    <columns>LT_Collection_City__c</columns>
    <columns>LT_Pickup_Request__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>